Fix slow performance of search filters
- move filters of attributes to AttributeService
- move getting search fields to AttributeService